# dem3d

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  README.rst  dockerfile  pyproject.toml  requirements_dev.txt  setup.cfg
dem3d/: __init__.py  cli_utils.py  dem3d.py  render.py  render_movie.py  scene.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  test_dem3d.py
